namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-users-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-users-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    cloud-platform.justice.gov.uk/namespace: "hmpps-users-preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-auth-audit-registers"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/application: "HMPPS users api"
    cloud-platform.justice.gov.uk/owner: "HMPPS Auth: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-users-api.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-auth-audit-registers"
